# VLF5

./: .gitignore
cubemx/: cubemx.ioc
firmware/: .gitignore  Cargo.toml  rust-toolchain.toml
firmware/.cargo/: config.toml
firmware/src/: buzzer_task.rs  can_main.rs  clock_config.rs  e22.rs  fmt.rs  lsm6dsm.rs  mag_test.rs  main_altimeter_test.rs  main_beacon.rs  main_blinky.rs  main_can_test.rs  main_gcm.rs  main_meg_test.rs  main_pyro_test.rs  main_sd_test.rs  main_sensors_test.rs  ms5607.rs  pyro_test.rs  sd_test.rs  sensors_test.rs  time.rs  utils.rs
firmware/src/tasks/: buzzer_task.rs  mod.rs  pyro_task.rs  vlp_avionics_daemon_task.rs
pcb/: Peripherals.kicad_sch  VLF5.kicad_pcb  VLF5.kicad_pro  VLF5.kicad_sch  power.kicad_sch  pyro.kicad_sch  rf.kicad_sch  stm32.kicad_sch
