[package]
edition = "2021"
name = "firmware"
version = "0.1.0"

[dependencies]
cortex-m = { version = "0.7.7", features = [
    "inline-asm",
    "critical-section-single-core",
] }
cortex-m-rt = "0.7.5"
defmt = { version = "1.0.1" }
defmt-rtt-pipe = { path = "../../Rust_Monorepo/defmt-rtt-pipe" }
embassy-executor = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "arch-cortex-m",
    "executor-thread",
    "nightly",
] }
embassy-futures = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-stm32 = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "memory-x",
    "stm32h743vi",
    "time-driver-any",
    "exti",
    "unstable-pac",
    "defmt",
] }
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }
embassy-time = { git = "https://github.com/embassy-rs/embassy.git", features = [
    "tick-hz-1_000_000",
    "defmt",
    "defmt-timestamp-uptime",
] }
panic-probe = { version = "1.0.0", features = ["print-defmt"] }
firmware-common-new = { path = "../../Rust_Monorepo/firmware-common-new", default-features = false, features = [
    "defmt",
] }
embedded-io-async = "0.6.1"
embedded-hal-async = "1.0.0"
futures = { version = "0.3.17", default-features = false, features = [
    "async-await",
] }
embassy-embedded-hal = { git = "https://github.com/embassy-rs/embassy.git" }
stm32-device-signature = { version = "0.3.3", features = ["stm32h74x"] }
embedded-can = "0.4.1"
crc = "3.2.1"
heapless = { version = "0.8.0", features = ["serde"], default-features = false }
lora-phy = { git = "https://github.com/lora-rs/lora-rs.git", default-features = false, features = [
    "defmt-03",
] }
embedded-sdmmc = { version = "0.8.1", default-features = false, features = [
    "defmt-log",
] }
biquad = "0.5.0"


[patch.crates-io]
embassy-sync = { git = "https://github.com/embassy-rs/embassy.git" }


[[bin]]
name = "beacon"
path = "src/main_beacon.rs"
test = false
bench = false

[[bin]]
name = "gcm"
path = "src/main_gcm.rs"
test = false
bench = false

# Testing Entry Points
[[bin]]
name = "altimeter_test"
path = "src/main_altimeter_test.rs"
test = false
bench = false

[[bin]]
name = "blinky"
path = "src/main_blinky.rs"
test = false
bench = false

[[bin]]
name = "can_test"
path = "src/main_can_test.rs"
test = false
bench = false

[[bin]]
name = "mag_test"
path = "src/main_mag_test.rs"
test = false
bench = false

[[bin]]
name = "pyro_test"
path = "src/main_pyro_test.rs"
test = false
bench = false

[[bin]]
name = "sd_test"
path = "src/main_sd_test.rs"
test = false
bench = false

[[bin]]
name = "sensors_test"
path = "src/main_sensors_test.rs"
test = false
bench = false

[profile.dev]
debug = true
lto = true
opt-level = "z"
incremental = true

[profile.release]
debug = false
lto = true
opt-level = "z"
incremental = true
